--- a/src/styles/MiniPlayer.module.css
+++ b/src/styles/MiniPlayer.module.css
@@ -1,8 +1,8 @@
 .miniPlayer {
-  width: 320px;
+  width: 420px;
   position: fixed;
   bottom: 100px;
-  right: 40px;
+  right: 50px;
   background-color: #fff;
   padding: 10px;
   box-sizing: border-box;
@@ -10,8 +10,8 @@
   border-radius: 5px;
 }
 
-.miniPlayer img {
-  width: 300px;
+.miniPlayer .player {
+  width: 100%;
   aspect-ratio: 16 / 9;
   object-fit: cover;
   animation: miniplayerAnim 0.3s ease forwards;
